--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+# Ignore intellij files
+.idea
+*.iml
+*.ipr
+*.iws
+*.ids
