--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'java'
+apply plugin: 'groovy'
 
 ext {
+    groovyVersion = '2.4.1'
     junitVersion = '4.12'
-    mockitoVersion = '2.0.2-beta'
     powerMockitoVersion = '1.6.2'
+    spockVersion = '1.0-groovy-2.4'
+    cglibVersion = '2.2'
 }
 
 repositories {
@@ -11,6 +14,9 @@ repositories {
 }
 
 dependencies {
+    compile "org.codehaus.groovy:groovy-all:$groovyVersion"
+    compile "cglib:cglib-nodep:$cglibVersion"
     testCompile "org.powermock:powermock-module-junit4:$powerMockitoVersion"
     testCompile "org.powermock:powermock-api-mockito:$powerMockitoVersion"
+    testCompile "org.spockframework:spock-core:$spockVersion"
 }
